# rust-blog

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  Cargo.toml  DISPATCH_NOTES.md  Dockerfile  Dockerfile.frontend  Dockerfile.frontend.dockerignore  README.md  bun.lockb  bunfig.toml  docker-compose.yml  index.html  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.ts  package.json  playwright.config.ts  posthog-setup-report.md  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  who-are-you.html
.cursor/: mcp.json  settings.json
_deploy/: package.json  server.js
app/: global-error.tsx  layout.tsx  page.tsx
benches/: event_parse.rs
components/: analytics-provider.tsx  animated-frame.tsx  authorship-badge.tsx  avatar-portrait-carousel.tsx  footnoted-article.tsx  hero-image.tsx  home-ctas.tsx  home-fingerprint-avatar.tsx  home-github-panel.tsx  home-hero-ab.tsx  home-selected-work.tsx  home-who-snapshot.tsx  multi-version-body.tsx  nav-row.tsx  post-read-tracker.tsx  reading-progress.tsx  share-bar.tsx  turnstile-gate.tsx  vercel-analytics-with-fingerprint.tsx  version-tabs.tsx
docs/: analytics-load-testing.md  azure-deployment.md  dispatch-smart-tasks.md  sentry-human-followups.md  work-with-me.md
e2e/: README.md  avatar-generation.spec.ts  posthog.spec.ts  sentry-ingest.spec.ts
lib/: analytics-ingestion-url.ts  analytics-read-apis.test.ts  analytics-read-apis.ts  client-ip.ts  config.ts  engagement-summary.test.ts  engagement-summary.ts  hero-image-opt-in.test.ts  home-fingerprint-avatar-portraits.test.ts  home-fingerprint-avatar-portraits.ts  mental-health-content.test.ts  mental-health-voice.test.ts  meta-conversions-api.ts  meta-pixel.ts  posthog-api.test.ts  posthog-api.ts  posts-display-ready.test.ts  posts-mental-health.test.ts  posts.ts  referral.ts  rust-api-url.test.ts  rust-api-url.ts  sentry-wiring.test.ts  share-tracking.test.ts  share-tracking.ts  share-url.ts  third-party-resources.test.ts  third-party-resources.ts  turnstile.ts  url-display.test.ts  url-display.ts  vpn-detect.test.ts  vpn-detect.ts
migrations/: 001_add_session_id_index.cql  002_add_user_profiles.cql  003_user_profiles_avatar.cql  004_user_profiles_4images.cql  004_user_profiles_session_avatar.cql  005_user_profiles_avatar_pngs.cql
plans/: analytics-api-deep-research.md  analytics-fingerprint-unified-table.md  analytics-multi-source.md  analytics-perf-adversarial-tests.md
posts/: 1.html  2.html  2020-year-in-review.html  2023-year-in-review.html  agentic-engineering-explained.html  analytics.js  augmented-social-networks.html  blog.css  cant-use-the-blessed-approach-just-yet-a-quick-way-to-solve-browser-redirects-after-auth-using-react-router.html  checking-in.html  cors-and-samesite-cookies-got-you-down-an-effective-workaround-for-browser-security-policies.html  how-we-could-make-facial-recognition-less-problematic.html  index.html  logging-into-spotify-oauth2-with-nextjs.html  memoization-generators-virtualization-oh-my-building-a-high-performance-directory-component-in-react.html  memory-leaks-in-node.html  monorepos-were-a-mistake.html  old-beginner-fatigue.html  test-refactoring-code-i-d-like-to-have.html  thenable-commands-in-cypress.html  when-fictionalization-gives-me-that-funny-feeling.html
public/: blog.css
rust-api/: Cargo.toml  Dockerfile  README.md
rust-api/src/: main.rs
scripts/: analytics-load.k6.js  azure-appsettings-apply.sh  azure-secrets.sh  check-sentry-dsn-literals.sh  deploy-azure.sh  deploy-rust-api.sh  e2e-mental-health.ts  e2e-preview.ts  finish-work-merge-ci.sh  import_notion_posts.py  poll-sentry-cosmos-scylla.sh  run-analytics-migrations.sh  setup-analytics.sh  setup-domain.sh  test-ci.sh  verify-analytics-read-apis.ts  verify-posthog-ingestion.ts  visual-regression-check.ts  visual-smoke-test.ts
(+390 files in other folders)
