[package]
name = "rust-blog"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_blog"
path = "src/lib.rs"

[[bin]]
name = "analytics-ingestion"
path = "src/bin/analytics_ingestion.rs"

[[bin]]
name = "setup-analytics"
path = "src/bin/setup_analytics.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rpassword = "5"
scylla = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
