[package]
name = "rust-blog"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_blog"
path = "src/lib.rs"

[[bin]]
name = "blog-service"
path = "src/bin/blog_service.rs"

[[bin]]
name = "setup-analytics"
path = "src/bin/setup_analytics.rs"

[[bin]]
name = "seed-mock-analytics"
path = "src/bin/seed_mock_analytics.rs"

[features]
# test-support enables MemoryProfileStore and in-memory binary mode for integration tests.
# NEVER add this to `default` — the prod Dockerfile builds without --features so it is
# always excluded from production images. CI enforces this with a metadata check.
default = []
test-support = []

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rpassword = "5"
scylla = { version = "0.15", features = ["ssl"] }
openssl = { version = "0.10", features = ["v102", "v110"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
urlencoding = "2.1"
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
rand_chacha = "0.3"
async-trait = "0.1"
base64 = "0.22"
# `default-features = false` avoids `native-tls`; `rustls` aligns with this crate's reqwest stack.
sentry = { version = "0.47", default-features = false, features = [
  "backtrace",
  "contexts",
  "debug-images",
  "panic",
  "release-health",
  "tracing",
  "reqwest",
  "rustls",
  "tokio",
  "tower",
  "tower-http",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
wiremock = "0.6"

[[bench]]
name = "event_parse"
harness = false
