[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"
description = "Minimal Axum API for Azure Container Apps (platform pattern: PORT, Prism env optional)"

[[bin]]
name = "rust_api"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
